2022-12-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/cpp/gcc/configure.ac,
	  support/cpp/gcc/configure: disable some assembler and
	  target tests unneeded for the preprocessor

2022-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix bug #3500.
	* src/stm8/gen.c,
	  src/pdk/gen.c:
	  Fix bug #3515.

2022-12-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-941021-1.c:
	  Remove a test that apparently relies on implementation-defined floating-point rounding behaviour.

2022-12-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2567.c,
	  support/regression/tests/bug-2752.c:
	  Provide external declaration of inline function to pass test-host for non-inlining host compilers.
	* sdas/aspdk14/pdk14mch.c,
	  sdas/aspdk15/pdk15mch.c:
	  Fix bug #3376, patch by Free-PDK.

2022-12-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/sm83/divint.s,
	  support/regression/tests/muldiv.c.in,
	  support/regression/tests/onebyte.c.in:
	  Fix a % sm83 library issue, patch by Job Bolle.
	* src/stm8/main.c:
	  Fix __sdcc_external_startup handling for stm8 large memory model.
	* src/z80/peeph.def:
	  Fix bug #3528.

2022-12-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  support/regression/tests/bug-3522.c:
	  Fix bug #3522.

2022-12-03 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_startup.c,
	  device/lib/ds390/tinibios.c,
	  device/lib/ez80_z80/crt0.s,
	  device/lib/mcs51/crtstart.asm,
	  device/lib/mcs51/crtxstack.asm,
	  device/lib/mos6502/crt0.s,
	  device/lib/mos6502-stack-auto/crt0.s,
	  device/lib/r2k/crt0.s,
	  device/lib/r2ka/crt0.s,
	  device/lib/r3ka/crt0.s,
	  device/lib/sm83/crt0.s,
	  device/lib/tlcs90/crt0.s,
	  device/lib/z180/crt0.s,
	  device/lib/z80/crt0.s,
	  device/lib/z80n/crt0.s,
	  doc/sdccman.lyx,
	  src/ds390/main.c,
	  src/hc08/main.c,
	  src/pdk/main.c,
	  src/stm8/main.c,
	  support/regression/ports/mcs51-common/support.c: